--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
 	font-family: Helvetica;
     font-weight: 100;
-    background: #eaeaea;
+    background: rgb(21,214,140);
+    background: linear-gradient(90deg, rgba(21,214,140,1) 21%, rgba(41,46,45,1) 98%);
     margin:0;
     padding: 0;
 }
